--- a/index.html
+++ b/index.html
@@ -79,10 +79,10 @@
         <div class="container">
             <!-- wrap of section -->
             <div class="section3__wrap">
-                <div class="section3__title"></div>
-                <div class="section3__subtitle"></div>
-                <button class="section3__button1"></button>
-                <button class="section3__button2"></button>
+                <div class="section3__title">Xbox Design Lab</div>
+                <div class="section3__subtitle">Make yours one in a billion with new colors, metallic finishes and rubberized grips.</div>
+                <button class="section3__button1">Design Yours</button>
+                <button class="section3__button2">Explore Consoles & Accessories</button>
             </div>
         </div>                
     </section>
