--- a/registration.html
+++ b/registration.html
@@ -4,11 +4,20 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./assets/css/style2.css">
     <title>Registration</title>
 </head>
 <body>
-    <div class="registration__block">
-        <form action="" class="registration__form"></form>
+    <div class="registration">
+        <form action="" class="registration__form">
+            <div class="registration__title">Registration</div>
+            <input type="text" class="registration__input" placeholder="Name">
+            <input type="tel" class="registration__input" placeholder="Phone">
+            <input type="email" class="registration__input" placeholder="E-mail">
+            <input type="password" class="registration__input" placeholder="Password">
+            <input type="submit" value="Send" class="registration__submit">
+            <a href="#" class="registration__login">Log in</a>
+        </form>
     </div>
 </body>
 </html>
