--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
             <!-- wrap of section -->
             <div class="section3__wrap">
                 <div class="section3__title">Xbox Design Lab</div>
-                <div class="section3__subtitle">Make yours one in a billion with new colors, metallic finishes and rubberized grips.</div>
+                <div class="section3__subtitle">Make yours one in a billion with new colors, metallic <br>finishes and rubberized grips.</div>
                 <button class="section3__button1">Design Yours</button>
                 <button class="section3__button2">Explore Consoles & Accessories</button>
             </div>
